--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div>
      <a href="#">Gmail</a>
      <a href="#">Images</a>
-    <div></div>
+     <i class="fa-light fa-bars"></i>
     <div></div>
 </body>
 </html>
