--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-
+<script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
    <div>
      <a href="#">Gmail</a>
      <a href="#">Images</a>
-     <i class="fa-light fa-bars"></i>
+     <i class="fa-solid fa-bars"></i>
     <div></div>
 </body>
 </html>
