--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
      <a href="#">Gmail</a>
      <a href="#">Images</a>
      <i class="fa-solid fa-bars"></i>
+   </div>
+    <div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png" width=300px/>
+      <div><input type="text"> </div>
+      <button>Google Search</button><button>I'm feeling lucky</button>
+       <div>Google offered in: 
+      <a href="#">한국어</a>
+      <a href="#">Tiếng Việt</a>
+      <a href="#">Français</a>
+      <a href="#">中文(簡體)</a> </div>
+      Vietnam
+      <div>
+      <a href="#">About</a>
+      <a href="#">Advertising</a>
+      <a href="#">Business</a>
+      <a href="#">How search works</a>
+      <a href="#">Privacy</a>
+      <a href="#">Term Settings</a>
+      </div>  
+    </div>    
     <div></div>
 </body>
 </html>
