--- a/index.html
+++ b/index.html
@@ -6,34 +6,50 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-<script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-   <div>
-     <a href="#">Gmail</a>
-     <a href="#">Images</a>
-     <i class="fa-solid fa-bars"></i>
-   </div>
+  <div>
+    <a href="#">Gmail</a>
+    <a href="#">Images</a>
+    <i class="fa-solid fa-bars"></i>
+  </div>
+
+  <div>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
+      width=272px />
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png" width=300px/>
-      <div><input type="text"> </div>
-      <button>Google Search</button><button>I'm feeling lucky</button>
-       <div>Google offered in: 
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <input type="text">
+      <i class="fa-solid fa-microphone"></i>
+    </div>
+    <div>
+      <button>Google Search</button>
+      <button>I'm feeling lucky</button>
+    </div>
+    <div>
+      Google offered in:
       <a href="#">한국어</a>
       <a href="#">Tiếng Việt</a>
       <a href="#">Français</a>
-      <a href="#">中文(簡體)</a> </div>
-      Vietnam
+      <a href="#">中文(簡體)</a>
+    </div>
+    <div>
+      <span>
+        Vietnam
+      </span>
       <div>
-      <a href="#">About</a>
-      <a href="#">Advertising</a>
-      <a href="#">Business</a>
-      <a href="#">How search works</a>
-      <a href="#">Privacy</a>
-      <a href="#">Term Settings</a>
-      </div>  
-    </div>    
-    <div></div>
+        <a href="#">About</a>
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">How search works</a>
+        <a href="#">Privacy</a>
+        <a href="#">Term Settings</a>
+      </div>
+  </div>
+  <div></div>
 </body>
+
 </html>
