span 태그는 그룹만 나눠줌 ,div태그는 다음줄로 넘김

--- a/index.html
+++ b/index.html
@@ -37,17 +37,21 @@
       <a href="#">中文(簡體)</a>
     </div>
     <div>
-      <span>
-        Vietnam
-      </span>
       <div>
+        Vietnam
+      </div>
+      <span>
         <a href="#">About</a>
         <a href="#">Advertising</a>
         <a href="#">Business</a>
         <a href="#">How search works</a>
+      </span>
+      
+      <span>
         <a href="#">Privacy</a>
-        <a href="#">Term Settings</a>
-      </div>
+        <a href="#">Term</a>        
+        <a href="#">Settings</a>
+      </span>
   </div>
   <div></div>
 </body>
