--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <a href="#">Term</a>        
         <a href="#">Settings</a>
       </span>
+    </div>
   </div>
-  <div></div>
 </body>
-
 </html>
