--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="navbar">
     <a href="#">Gmail</a>
     <a href="#">Images</a>
     <i class="fa-solid fa-bars"></i>
@@ -46,13 +46,14 @@
         <a href="#">Business</a>
         <a href="#">How search works</a>
       </span>
-      
+
       <span>
         <a href="#">Privacy</a>
-        <a href="#">Term</a>        
+        <a href="#">Term</a>
         <a href="#">Settings</a>
       </span>
     </div>
   </div>
 </body>
+
 </html>
