gmail.image버튼 변경 css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="navbar">
-    <a href="#">Gmail</a>
-    <a href="#">Images</a>
+    <a href="#"class="navitem">Gmail</a>
+    <a href="#"class="navitem">Images</a>
     <i class="fa-solid fa-bars"></i>
   </div>
 
