--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="navbar">
-    <a href="#"class="navitem">Gmail</a>
-    <a href="#"class="navitem">Images</a>
+    <a href="#" class="nav-item">Gmail</a>
+    <a href="#" class="nav-item">Images</a>
     <i class="fa-solid fa-bars"></i>
   </div>
 
