--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body>
   <div class="navbar">
-    <a href="#" class="nav-item">Gmail</a>
-    <a href="#" class="nav-item">Images</a>
+    <a href="#"class="nav-item">Gmail</a>
+    <a href="#"class="nav-item">Images</a>
     <i class="fa-solid fa-bars"></i>
   </div>
 
   <div>
-    <img
-      src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
       width=272px />
     <div>
       <i class="fa-solid fa-magnifying-glass"></i>
