상단바 까지 딸려오는 문제점 생김

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
+    <script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <i class="fa-solid fa-bars"></i>
   </div>
 
-  <div>
+  <div class="main">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
       width=272px />
     <div>
