--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-    <script src="https://kit.fontawesome.com/3b6be8eb15.js" crossorigin="anonymous"></script>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <div class="navbar">
-    <a href="#"class="nav-item">Gmail</a>
-    <a href="#"class="nav-item">Images</a>
-    <i class="fa-solid fa-bars"></i>
-  </div>
-
-  <div class="main">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png"
-      width=272px />
-    <div>
-      <i class="fa-solid fa-magnifying-glass"></i>
-      <input type="text">
-      <i class="fa-solid fa-microphone"></i>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/14b1ef6335.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="#" class="nav-item">Gmail</a>
+      <a href="#" class="nav-item">Images</a>
+      <i class="fa-solid fa-bars"></i>
     </div>
-    <div>
-      <button>Google Search</button>
-      <button>I'm feeling lucky</button>
-    </div>
-    <div>
-      Google offered in:
-      <a href="#">한국어</a>
-      <a href="#">Tiếng Việt</a>
-      <a href="#">Français</a>
-      <a href="#">中文(簡體)</a>
-    </div>
-    <div>
-      <div>
-        Vietnam
+
+    <div class="main">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/368px-Google_2015_logo.svg.png" width=272/>
+      <div class="input-area">
+        <i class="fa-solid fa-magnifying-glass search-icon"></i>
+        <input type="text" class="input-box"/>
+        <i class="fa-solid fa-microphone mic-icon"></i>
       </div>
+      <div class="button-area">
+        <button class="button-style">Google Search</button>
+        <button class="button-style">I'm feeling lucky</button>
+      </div>
+      <div class="language-line">
+        Google 제공 서비스:
+        <a href="#" class="offered-item">English</a>
+        <a href="#" class="offered-item">한국어</a>
+        <a href="#" class="offered-item">Tiếng Việt</a>
+        <a href="#" class="offered-item">Français</a>
+        <a href="#" class="offered-item">中文(簡體)</a>
+      </div>
+
+
+    
+<div>
+  <div>
+    Vietnam
+  </div>
       <span>
         <a href="#">About</a>
         <a href="#">Advertising</a>
@@ -51,7 +52,7 @@
         <a href="#">Term</a>
         <a href="#">Settings</a>
       </span>
-    </div>
+</div>
   </div>
 </body>
 
