--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       </div>
       <div class="language-line">
         Google 제공 서비스:
-        <a href="#" class="offered-item">English</a>
-        <a href="#" class="offered-item">한국어</a>
-        <a href="#" class="offered-item">Tiếng Việt</a>
-        <a href="#" class="offered-item">Français</a>
-        <a href="#" class="offered-item">中文(簡體)</a>
+        <a href="#" class="language">English</a>
+        <a href="#" class="language">한국어</a>
+        <a href="#" class="language">Tiếng Việt</a>
+        <a href="#" class="language">Français</a>
+        <a href="#" class="language">中文(簡體)</a>
       </div>
 
 
