--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
         <a href="#" class="language">Français</a>
         <a href="#" class="language">中文(簡體)</a>
       </div>
-
-
     
-<div>
+<div class="footer">
   <div>
     Vietnam
   </div>
