구글 웹사이트

--- a/index.html
+++ b/index.html
@@ -34,24 +34,27 @@
         <a href="#" class="language">中文(簡體)</a>
       </div>
     
-<div class="footer">
-  <div>
-    Vietnam
-  </div>
-      <span>
-        <a href="#">About</a>
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">How search works</a>
-      </span>
+    <div class="footer">
+      <div class="first-line">
+        한국어
+      </div>
 
-      <span>
-        <a href="#">Privacy</a>
-        <a href="#">Term</a>
-        <a href="#">Settings</a>
-      </span>
-</div>
-  </div>
+        <div class="second-line">
+            <span>
+              <a href="#">About</a>
+              <a href="#">Advertising</a>
+              <a href="#">Business</a>
+              <a href="#">How search works</a>
+            </span>
+
+            <span class="second-line-second">
+              <a href="#">Privacy</a>
+              <a href="#">Term</a>
+              <a href="#">Settings</a>
+            </span>
+        </div>
+    </div>
+
 </body>
 
 </html>
